[package]
name = "ostools"
version = "1.0.0"
edition = "2021"
authors = ["Rocco <rocco@anal.repair>"]

[lib]
name = "ostools"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "injector"
path = "src/main.rs"


[profile.release]
lto = true

[dependencies]
iced-x86 = "1.19.0"
hook = { git = "https://git.anal.repair/JimColerick/hook.git" }
tlhelp32iterators = { git = "https://git.anal.repair/JimColerick/tlhelp32iterators.git" }
offset_macro = { git = "https://git.anal.repair/JimColerick/offset.git" }
windows-sys = {version = "*", features = [
                "Win32_Foundation",
                "Win32_System_Kernel",
                "Win32_System_Memory",
                "Win32_System_Threading",
                "Win32_System_Console",
                "Win32_System_ProcessStatus",
                "Win32_System_LibraryLoader",
                "Win32_System_SystemServices",
                "Win32_System_Diagnostics_Debug",
                "Win32_System_Diagnostics_ToolHelp",
                "Win32_UI_Input_KeyboardAndMouse",
                "Win32_UI_WindowsAndMessaging",
                "Win32_System_Threading",
                "Win32_Security",
                ]}
lazy_static = "1.4.0"
once_cell = "1.18.0"
color-eyre = "0.6.2" 
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
log = "0.4.19"
dll-syringe = "0.15.2"
